Secondary operations added, as well as JSON output for API

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     // for api
     compile "io.ktor:ktor-server-core:$ktor_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
+    // API with JSON
+    compile "io.ktor:ktor-jackson:$ktor_version"
 }
 
 compileKotlin {
