--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,21 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
+    }
+}
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.70'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
-
 }
 
+apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'kotlin'
 apply plugin: 'application'
-mainClassName = 'io.ktor.server.netty.EngineMain' // Starting with 1.0.0-beta-3
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -26,7 +35,7 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // database things
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
     compile "org.jetbrains.exposed:exposed-core:$exposed_version"
     compile "org.jetbrains.exposed:exposed-dao:$exposed_version"
     compile "org.jetbrains.exposed:exposed-jdbc:$exposed_version"
@@ -41,10 +50,18 @@ dependencies {
     // API with JSON
     compile "io.ktor:ktor-jackson:$ktor_version"
 }
-
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+application {
+    mainClassName = 'api.SocialMediaAppKt'
+}
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
 }
